Transformation bone constraint brake Track To / Dumped Track #36203

Closed
opened 2013-07-18 13:22:27 +02:00 by Borek Bures · 4 comments

%%%--- Operating System, Graphics card ---
Windows 7 64bits, Nvidia GTX 680

- Blender version with error, and version that worked ---

Blender 2.67 r58357 and worked with 2.67b r57141

- Short description of error ---

using Transformation bone constraint brake Track To (or Dumped Track) constraints and cause absurd grab of bone

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

grab bone with constraints repeatedly
%%%

%%%--- Operating System, Graphics card --- Windows 7 64bits, Nvidia GTX 680 - Blender version with error, and version that worked --- Blender 2.67 r58357 and worked with 2.67b r57141 - Short description of error --- using Transformation bone constraint brake Track To (or Dumped Track) constraints and cause absurd grab of bone - Steps for others to reproduce the error (preferably based on attached .blend file) --- grab bone with constraints repeatedly %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed that when you translate the "root" bone, and then try to translate "trackBone", it doesn't follow the mouse cursor properly. Caused by this commit:
https://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=57309%%%

%%%Confirmed that when you translate the "root" bone, and then try to translate "trackBone", it doesn't follow the mouse cursor properly. Caused by this commit: https://projects.blender.org/scm/viewvc.php?view=rev&root=bf-blender&revision=57309%%%
Member

%%%Should be fixed in svn now (r.61110)

At least when I was testing it, the error seemed quite subtle, so please check to see if I've missed the actual problem you were having :)%%%

%%%Should be fixed in svn now (r.61110) At least when I was testing it, the error seemed quite subtle, so please check to see if I've missed the actual problem you were having :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36203
No description provided.